--- a/mobile_hivemind/app/src/main/res/layout/activity_login.xml
+++ b/mobile_hivemind/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
 
     <!-- Primeiro campo de texto -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutNOMEEMP"
+        android:id="@+id/textInputLayoutEMAILCONT"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView2">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextNOMEEMP"
+            android:id="@+id/editTextEMAILCONT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -59,7 +59,7 @@
         android:hint="Senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNOMEEMP">
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEMAILCONT">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextPassword"
