--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_pessoal.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_pessoal.xml
@@ -10,55 +10,56 @@
 
     <TextView
         android:id="@+id/txtTitulo"
-        android:layout_width="wrap_content"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:layout_marginBottom="39dp"
         android:fontFamily="@font/lexend_deca_semibold"
-        android:text="Informação Pessoal"
-        android:textColor="#141414"
-        android:textSize="33dp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNOMEEMP"
+        android:text="Informações do responsável"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEMAILCONT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.262"
+        app:layout_constraintHorizontal_bias="0.312"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutNOMEEMP"
+        android:id="@+id/textInputLayoutEMAILCONT"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="390dp"
         android:layout_height="60dp"
-        android:hint="Porte da empresa"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutSENHA"
+        android:hint="Telefone"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNPJ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitulo">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextNOMEEMP"
+            android:id="@+id/editTextEMAILCONT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:text="Initial text" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Nome -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutSENHA"
+        android:id="@+id/textInputLayoutCNPJ"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
-        android:hint="Quantidade de setores"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCONFSENHA"
+        android:hint="Nome"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNAE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNOMEEMP">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEMAILCONT">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextSENHA"
+            android:id="@+id/editTextCNPJ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -66,21 +67,22 @@
             android:text="41.586.734/0001-81" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- CPF -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutCONFSENHA"
+        android:id="@+id/textInputLayoutCNAE"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
-        android:hint="Quantidade de alas por setor"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutRG"
+        android:hint="CPF"
+        app:layout_constraintBottom_toTopOf="@+id/layoutRGUpload"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSENHA">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCNPJ">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextCONFSENHA"
+            android:id="@+id/editTextCNAE"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -88,28 +90,30 @@
             android:text="2222-6/00" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutRG"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <!-- Upload RG -->
+    <LinearLayout
+        android:id="@+id/layoutRGUpload"
         android:layout_width="390dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="177dp"
-        android:hint="Segmento industrial"
-        app:layout_constraintBottom_toTopOf="@+id/txtContinuar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        android:orientation="vertical"
+        android:background="@drawable/borda_anexo"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCNAE"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCONFSENHA">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextRG"
+        <TextView
+            android:id="@+id/btnAnexarRG"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:maxLines="1"
-            android:text="142.270.790.110" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_clipn"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/lexend_deca"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:text="Adicionar anexo"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txtContinuar"
