--- a/mobile_hivemind/app/src/main/res/layout/fragment_criacao_conta.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_criacao_conta.xml
@@ -25,7 +25,7 @@
 
     <!-- Nome da Empresa -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutNOMEEMP"
+        android:id="@+id/textInputLayoutEMAILCONT"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtTitulo">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextNOMEEMP"
+            android:id="@+id/editTextEMAILCONT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1" />
@@ -45,7 +45,7 @@
 
     <!-- Senha -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutSENHA"
+        android:id="@+id/textInputLayoutCNPJ"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextSENHA"
+            android:id="@+id/editTextCNPJ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -75,7 +75,7 @@
         android:textColor="#7A7A7A"
         android:textSize="14sp"
         android:fontFamily="@font/lexend_deca"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSENHA"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCNPJ"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -137,7 +137,7 @@
 
     <!-- Confirmação de Senha -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutCONFSENHA"
+        android:id="@+id/textInputLayoutCNAE"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -149,7 +149,7 @@
         app:layout_constraintTop_toBottomOf="@+id/regra5">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextCONFSENHA"
+            android:id="@+id/editTextCNAE"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -168,7 +168,7 @@
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCONFSENHA">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCNAE">
 
         <TextView
             android:id="@+id/btnAnexarImagem"
