--- a/mobile_hivemind/app/src/main/res/layout/activity_login.xml
+++ b/mobile_hivemind/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Entrar na conta"
         android:textColor="#000000"
+        android:textColorLink="#5F27FF"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
