--- a/mobile_hivemind/app/src/main/res/layout/activity_main.xml
+++ b/mobile_hivemind/app/src/main/res/layout/activity_main.xml
@@ -15,36 +15,66 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <!-- BottomNavigationView -->
+    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#DCD2FB"
+        android:layout_width="match_parent"
+        android:layout_height="99dp"
+        android:background="@drawable/bottom_nav_bg"
+        android:backgroundTintMode="src_in"
+        app:itemIconSize="21dp"
         app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <!-- Secondary FABs (initially hidden) -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_op1"
+        style="@style/Widget.Material3.FloatingActionButton.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_op1"
+        android:layout_marginBottom="140dp"
+        android:visibility="gone"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:layout_constraintHorizontal_bias="0.5" />
 
-    <!-- FloatingActionButton (no final, para estar sobreposto) -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAddParada"
-        android:layout_width="64dp"
-        android:layout_marginBottom="28dp"
+        android:id="@+id/fab_op2"
+        style="@style/Widget.Material3.FloatingActionButton.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_op2"
+        android:layout_marginBottom="200dp"
+        android:visibility="gone"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
+
+    <!-- Main FAB (abre/fecha o menu) -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_main"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_marginBottom="56dp"
         android:src="@drawable/baseline_add_24"
-        app:backgroundTint="#FBFBFB"
-        app:borderColor="#7D4CDB"
-        app:borderWidth="2dp"
+        app:backgroundTint="#EDEAEA"
         app:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:tint="#9174ED"
         tools:ignore="SpeakableTextPresentCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
