--- a/mobile_hivemind/app/src/main/res/layout/parada_item.xml
+++ b/mobile_hivemind/app/src/main/res/layout/parada_item.xml
@@ -41,7 +41,7 @@
             android:fontFamily="@font/lexend_deca_semibold"
             android:hint="Nome da máquina"
             android:padding="5dp"
-            android:textColorHint="#858585"
+            android:textColorHint="#24252C"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,34 +54,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="9dp"
             android:fontFamily="@font/lexend_deca"
             android:hint="11:22 PM"
             android:padding="5dp"
-            android:textColorHint="#858585"
+            android:textColorHint="#AB94FF"
             android:textSize="15sp"
             android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvNome_IdMaq" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/ivClock"
+            android:layout_width="25dp"
+            android:layout_height="27dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="9dp"
             android:layout_marginBottom="16dp"
-            android:text="🕒"
-            android:textSize="20dp"
+            android:src="@drawable/ic_clock"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tvTempoParada"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvNome_IdMaq"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:tint="#AB94FF" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
