--- a/mobile_hivemind/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/mobile_hivemind/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,16 +15,13 @@
         android:title="Calendario" />
 
     <item
-        android:id="@+id/navigation_add"
-        android:title="Adicionar Parada" />
-    <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/graph"
         android:iconTint="#B5A0F3"
         android:title="Dashboard" />
     <item
         android:id="@+id/navigation_perfil"
-        android:icon="@drawable/perfil"
+        android:icon="@drawable/profile"
         android:iconTint="#B5A0F3"
         android:title="Perfil" />
 
