--- a/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
+++ b/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/cadastroBasicoFragment">
+    app:startDestination="@id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -27,65 +27,6 @@
         android:name="com.aula.mobile_hivemind.ui.perfil.PerfilFragment"
         android:label="fragment_perfil"
         tools:layout="@layout/fragment_perfil" />
-    <fragment
-        android:id="@+id/cadastroBasicoFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.cadastro.CadastroBasicoFragment"
-        android:label="fragment_cadastro_basico"
-        tools:layout="@layout/fragment_cadastro_basico" >
-        <action
-            android:id="@+id/action_cadastroBasicoFragment_to_cadastroEnderecoFragment"
-            app:destination="@id/cadastroEnderecoFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/cadastroEnderecoFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.cadastro.CadastroEnderecoFragment"
-        android:label="fragment_cadastro_endereco"
-        tools:layout="@layout/fragment_cadastro_endereco" >
-        <action
-            android:id="@+id/action_cadastroEnderecoFragment_to_cadastroEstruturaFragment"
-            app:destination="@id/cadastroEstruturaFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/cadastroEstruturaFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.cadastro.CadastroEstruturaFragment"
-        android:label="fragment_cadastro_estrutura"
-        tools:layout="@layout/fragment_cadastro_estrutura" >
-        <action
-            android:id="@+id/action_cadastroEstruturaFragment_to_cadastroPessoalFragment"
-            app:destination="@id/cadastroPessoalFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/cadastroPessoalFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.cadastro.CadastroPessoalFragment"
-        android:label="fragment_cadastro_pessoal"
-        tools:layout="@layout/fragment_cadastro_pessoal" >
-        <action
-            android:id="@+id/action_cadastroPessoalFragment_to_verificacaoCellFragment"
-            app:destination="@id/verificacaoCellFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/criacaoContaFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.cadastro.CriacaoContaFragment"
-        android:label="fragment_criacao_conta"
-        tools:layout="@layout/fragment_criacao_conta" />
-    <fragment
-        android:id="@+id/verificacaoCellFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.VerificacaoCellFragment"
-        android:label="fragment_verificacao_cell"
-        tools:layout="@layout/fragment_verificacao_cell" >
-        <action
-            android:id="@+id/action_verificacaoCellFragment_to_verificacaoEmailFragment"
-            app:destination="@id/verificacaoEmailFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/verificacaoEmailFragment"
-        android:name="com.aula.mobile_hivemind.ui.auth.VerificacaoEmailFragment"
-        android:label="fragment_verificacao_email"
-        tools:layout="@layout/fragment_verificacao_email" >
-        <action
-            android:id="@+id/action_verificacaoEmailFragment_to_criacaoContaFragment"
-            app:destination="@id/criacaoContaFragment" />
-    </fragment>
     <activity
         android:id="@+id/splashScreenActivity"
         android:name="com.aula.mobile_hivemind.SplashScreenActivity"
@@ -105,9 +46,4 @@
         android:id="@+id/addParadaFragment"
         android:name="com.aula.mobile_hivemind.ui.paradas.AddParadaFragment"
         android:label="AddParadaFragment" />
-    <activity
-        android:id="@+id/loginActivity"
-        android:name="com.aula.mobile_hivemind.ui.auth.login.LoginActivity"
-        android:label="activity_login"
-        tools:layout="@layout/activity_login" />
 </navigation>
