--- a/mobile_hivemind/app/src/main/res/layout/fragment_add_parada.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_add_parada.xml
@@ -132,23 +132,39 @@
                 android:textColor="#212121"
                 android:textSize="16sp" />
 
-            <Spinner
-                android:id="@+id/spinnerData"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutDATAPARADA"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="376dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/bottom_line_drawable"
-                android:entries="@array/data_parada_options"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:spinnerMode="dropdown" />
+                app:boxBackgroundMode="outline"
+                app:boxCornerRadiusBottomEnd="16dp"
+                app:boxCornerRadiusBottomStart="16dp"
+                app:boxCornerRadiusTopEnd="16dp"
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="#6B3EFF"
+                app:endIconMode="@drawable/ic_dropdown"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
+                app:startIconDrawable="@drawable/calendar">
 
-            <TextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextDATAPARADA"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:textColor="#000000" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins"
-                android:text="Setor da parada e Ala"
+                android:text="Setor da parada"
                 android:textColor="#212121"
                 android:textSize="16sp" />
 
@@ -158,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/bottom_line_drawable"
-                android:entries="@array/setor_ala_options"
+                android:entries="@array/setor_options"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:spinnerMode="dropdown" />
