--- a/mobile_hivemind/app/src/main/res/layout/fragment_perfil.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_perfil.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/background_2"
     tools:context=".ui.perfil.PerfilFragment">
 
     <!-- Botão Voltar -->
@@ -13,156 +13,260 @@
         android:id="@+id/btnVoltar"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/arrow_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:tint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Título -->
     <TextView
         android:id="@+id/txtTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Configurações"
-        android:textSize="26sp"
-        android:textColor="#000"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/lexend_deca_semibold"
-        app:layout_constraintTop_toTopOf="@id/btnVoltar"
-        app:layout_constraintBottom_toBottomOf="@id/btnVoltar"
-        app:layout_constraintStart_toEndOf="@id/btnVoltar"
-        android:layout_marginStart="16dp" />
+        android:text="Configurações"
+        android:textColor="#FFFFFF"
+        android:textSize="32sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnVoltar" />
+
+    <!-- Fundo branco -->
+    <View
+        android:id="@+id/view2"
+        android:layout_width="412dp"
+        android:layout_height="583dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />
 
     <!-- Seção Geral -->
     <TextView
         android:id="@+id/txtGeral"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
         android:text="Geral"
         android:textSize="18sp"
-        android:textColor="#000"
+        android:textColor="#000000"
         android:fontFamily="@font/lexend_deca_semibold"
         app:layout_constraintTop_toBottomOf="@id/txtTitulo"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Item: Informação da conta -->
-    <include
-        layout="@layout/item_settings_row"
+    <!-- Itens de configuração -->
+    <!-- Informação da conta -->
+    <LinearLayout
         android:id="@+id/itemInfoConta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/txtGeral"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"
-        app:icon="@drawable/ic_perfil"
-        app:label="Informação da conta" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtGeral">
 
-    <!-- Item: Endereço da conta -->
-    <include
-        layout="@layout/item_settings_row"
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_perfil" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/lexend_deca"
+            android:text="Informação da conta"
+            android:textColor="#000000"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Endereço da conta -->
+    <LinearLayout
         android:id="@+id/itemEndereco"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/itemInfoConta"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:icon="@drawable/ic_map"
-        app:label="Endereço da conta" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Item: Métodos de pagamento -->
-    <include
-        layout="@layout/item_settings_row"
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_map" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Endereço da conta" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Métodos de pagamento -->
+    <LinearLayout
         android:id="@+id/itemPagamento"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/itemEndereco"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:icon="@drawable/ic_payment"
-        app:label="Métodos de pagamento" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Item: Aparência -->
-    <include
-        layout="@layout/item_settings_row"
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_payment" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Métodos de pagamento" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Aparência -->
+    <LinearLayout
         android:id="@+id/itemAparencia"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/itemPagamento"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:icon="@drawable/ic_mode"
-        app:label="Aparência" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Item: Notificações (Geral) -->
-    <include
-        layout="@layout/item_settings_row"
-        android:id="@+id/itemNotificacoesGeral"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_mode" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Aparência" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Notificações -->
+    <LinearLayout
+        android:id="@+id/itemNotificacoes"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/itemAparencia"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:icon="@drawable/ic_notifications_black_24dp"
-        app:label="Notificações" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Seção Suporte -->
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_notifications_black_24dp" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Notificações" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Suporte -->
     <TextView
         android:id="@+id/txtSuporte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Suporte"
-        android:textSize="18sp"
-        android:textColor="#000"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/lexend_deca_semibold"
-        app:layout_constraintTop_toBottomOf="@id/itemNotificacoesGeral"
+        android:text="Suporte"
+        android:textColor="#000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/itemNotificacoes" />
 
-    <!-- Item: Reportar um erro -->
-    <include
-        layout="@layout/item_settings_row"
+    <!-- Reportar erro -->
+    <LinearLayout
         android:id="@+id/itemErro"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/txtSuporte"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"
-        app:icon="@drawable/ic_error"
-        app:label="Reportar um erro" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Item: Ajuda (Suporte - icon question) -->
-    <include
-        layout="@layout/item_settings_row"
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_error" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Reportar um erro" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Ajuda -->
+    <LinearLayout
         android:id="@+id/itemAjuda"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/ConfigItemStyle"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemErro"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:icon="@drawable/ic_question"
-        app:label="Ajuda" />
+        tools:ignore="MissingConstraints">
 
-    <!-- Botão: Sair da conta -->
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_question" />
+
+        <TextView
+            style="@style/ConfigLabel"
+            android:text="Dúvidas" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <!-- Sair da conta -->
     <Button
         android:id="@+id/btnSair"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
-        android:text="Sair da conta"
-        android:textColor="#6B3EFF"
-        android:backgroundTint="#00000000"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/border_button"
-        app:layout_constraintTop_toBottomOf="@id/itemAjuda"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/lexend_deca_medium"
+        android:text="Sair da conta"
+        android:textAllCaps="false"
+        android:textColor="#6B3EFF"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemAjuda" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
