--- a/mobile_hivemind/app/src/main/res/values/styles.xml
+++ b/mobile_hivemind/app/src/main/res/values/styles.xml
@@ -10,4 +10,27 @@
         <item name="android:textColor">#000000</item>
         <item name="android:maxLength">1</item>
     </style>
+
+    <style name="ConfigItemStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+    </style>
+
+    <style name="ConfigLabel">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/lexend_deca</item>
+    </style>
+
 </resources>
