--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_basico.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_basico.xml
@@ -29,7 +29,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="390dp"
         android:layout_height="60dp"
-        android:hint="Email de contato"
+        android:hint="Email da industria"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNPJ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -51,6 +53,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="CNPJ"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNAE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -73,6 +77,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="CNAE"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutIE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -95,6 +101,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Inscrição Estadual"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDATAFUND"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -116,8 +124,11 @@
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="91dp"
         android:hint="Data de fundação"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCOMP"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
+        app:layout_constraintBottom_toTopOf="@+id/txtContinuar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
