--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_endereco.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_endereco.xml
@@ -26,6 +26,8 @@
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:hint="CEP"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNPJ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -47,6 +49,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Estado"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNAE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -69,6 +73,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Cidade"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutIE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -91,6 +97,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Bairro"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDATAFUND"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -113,6 +121,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Número"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCOMP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -136,6 +146,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="32dp"
         android:hint="Complemento (opcional)"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/txtContinuar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
