--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_estrutura.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_estrutura.xml
@@ -30,6 +30,8 @@
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:hint="Porte da empresa"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNPJ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -51,6 +53,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Quantidade de setores"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNAE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -73,6 +77,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Quantidade de alas por setor"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutIE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -96,6 +102,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="177dp"
         android:hint="Segmento industrial"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/txtContinuar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
