--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_pessoal.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_pessoal.xml
@@ -30,6 +30,8 @@
         android:layout_width="390dp"
         android:layout_height="60dp"
         android:hint="Telefone"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNPJ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -52,6 +54,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="Nome"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCNAE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -75,6 +79,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:hint="CPF"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
         app:layout_constraintBottom_toTopOf="@+id/layoutRGUpload"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
