--- a/mobile_hivemind/app/src/main/res/drawable/bg_rounded_box.xml
+++ b/mobile_hivemind/app/src/main/res/drawable/bg_rounded_box.xml
@@ -5,4 +5,4 @@
     <corners android:radius="12dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/lavender_dark" /> </shape>
+        android:color="#A3B378FF" /> </shape>
