--- a/mobile_hivemind/app/src/main/res/layout/activity_login.xml
+++ b/mobile_hivemind/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,9 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/activity_login" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:padding="24dp"
@@ -12,11 +14,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:layout_marginEnd="155dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Entrar na conta"
         android:textColor="#000000"
         android:textColorLink="#5F27FF"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,19 +31,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="189dp"
+        android:layout_marginBottom="40dp"
         android:fontFamily="@font/lexend_deca"
         android:text="MANGOS MANGOS MANGOS"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEMAILCONT"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView" />
 
-    <!-- Primeiro campo de texto -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutEMAILCONT"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="380dp"
+        android:layout_height="60dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="50dp"
         android:hint="Email"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2">
@@ -50,14 +64,16 @@
             android:text="Initial text" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Segundo campo de texto -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="380dp"
+        android:layout_height="60dp"
         android:layout_marginTop="50dp"
         android:hint="Senha"
+        android:textColorHint="#646464"
+        app:boxStrokeColor="#646464"
+        app:helperTextTextColor="#646464"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutEMAILCONT">
@@ -72,12 +88,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Esqueceu a senha?"
+        android:textColor="#646464"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,11 +103,10 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginEnd="92dp"
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Cadastre-se"
         android:textColor="#5F33E1"
@@ -103,12 +118,12 @@
         app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />
 
     <TextView
-        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Não tem uma conta?"
+        android:textColor="#646464"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
@@ -118,13 +133,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="365dp"
+        android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#5F33E1"
         android:fontFamily="@font/lexend_deca"
         android:text="Entrar"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,13 +160,12 @@
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/btnGoogleSignIn"
-        android:layout_width="match_parent"
+        android:layout_width="365dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.0" />
