--- a/mobile_hivemind/app/src/main/res/layout/fragment_add_parada.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_add_parada.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F8FA"
-    tools:context=".ui.paradas.AddParadaFragment">
+    tools:context=".ui.home.paradas.AddParadaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,6 +86,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins"
+                android:text="Código de identificação do colaborador"
+                android:textColor="#212121"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/editCodigoColaborador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bottom_line_drawable"
+                android:hint="Digite o código"
+                android:inputType="text"
+                android:paddingBottom="8dp"
+                android:textColor="#212121"
+                android:textColorHint="#9E9E9E" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/poppins"
                 android:text="Nome da máquina"
                 android:textColor="#212121"
                 android:textSize="16sp" />
@@ -159,26 +180,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppins"
-                android:text="Setor da parada"
-                android:textColor="#212121"
-                android:textSize="16sp" />
-
-            <Spinner
-                android:id="@+id/spinnerSetor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/bottom_line_drawable"
-                android:entries="@array/setor_options"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:spinnerMode="dropdown" />
-
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
@@ -189,11 +190,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             app:cardBackgroundColor="#E0F2F7"
-            app:cardCornerRadius="8dp"
+            app:cardCornerRadius="0dp"
             app:cardElevation="0dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="382dp"
                 android:layout_height="wrap_content"
                 android:elevation="0dp"
                 android:orientation="vertical"
@@ -214,24 +215,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_marginEnd="4dp"
-                        android:contentDescription="Ícone de check"
-                        android:src="@drawable/check" />
-
-                    <TextView
-                        android:id="@+id/textResumoSetor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins"
-                        android:hint="Setor e ala"
-                        android:textColor="#757575"
-                        android:textSize="14sp" />
-                </LinearLayout>
+                    android:orientation="horizontal" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
