--- a/mobile_hivemind/app/src/main/res/layout/fragment_maintenance.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_maintenance.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_light"
-    tools:context=".ui.paradas.MaintenanceFragment">
+    tools:context=".ui.home.paradas.MaintenanceFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
