--- a/mobile_hivemind/app/src/main/res/layout/parada_item_recycleview_principal.xml
+++ b/mobile_hivemind/app/src/main/res/layout/parada_item_recycleview_principal.xml
@@ -14,7 +14,7 @@
         android:layout_height="115dp">
 
         <TextView
-            android:id="@+id/tvSetprMaq"
+            android:id="@+id/tvSetorMaq"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -24,6 +24,7 @@
             android:hint="Setor máquina"
             android:padding="5dp"
             android:textColorHint="#858585"
+            android:textColor="#858585"
             android:textSize="13sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +42,14 @@
             android:fontFamily="@font/lexend_deca_semibold"
             android:hint="Nome da máquina"
             android:padding="5dp"
+            android:textColor="#24252C"
             android:textColorHint="#24252C"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvSetprMaq" />
+            app:layout_constraintTop_toBottomOf="@+id/tvSetorMaq" />
 
         <TextView
             android:id="@+id/tvTempoParada"
@@ -61,6 +63,7 @@
             android:hint="11:22 PM"
             android:padding="5dp"
             android:textColorHint="#AB94FF"
+            android:textColor="#AB94FF"
             android:textSize="15sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
