--- a/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
+++ b/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.aula.mobile_hivemind.ui.notifications.NotificationsFragment"
+        android:name="com.aula.mobile_hivemind.ui.calendar.CalendarFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_dashboard" />
     <fragment
@@ -34,17 +34,17 @@
         tools:layout="@layout/activity_splash_screen" />
     <fragment
         android:id="@+id/confirmationFragment"
-        android:name="com.aula.mobile_hivemind.ui.paradas.ConfirmationFragment"
+        android:name="com.aula.mobile_hivemind.ui.home.paradas.ConfirmationFragment"
         android:label="fragment_confirmation"
         tools:layout="@layout/fragment_confirmation" />
     <fragment
         android:id="@+id/maintenanceFragment"
-        android:name="com.aula.mobile_hivemind.ui.paradas.MaintenanceFragment"
+        android:name="com.aula.mobile_hivemind.ui.home.paradas.MaintenanceFragment"
         android:label="fragment_maintenance"
         tools:layout="@layout/fragment_maintenance" />
     <fragment
         android:id="@+id/addParadaFragment"
-        android:name="com.aula.mobile_hivemind.ui.paradas.AddParadaFragment"
+        android:name="com.aula.mobile_hivemind.ui.home.paradas.AddParadaFragment"
         android:label="AddParadaFragment"
         tools:layout="@layout/fragment_add_parada"/>
 </navigation>
